Section#About me ISSUE: big gap on left side of page, content sticking to right edge of page SOL: remove extra left padding on section container
ISSUE: flex-grow causing big gap between main content and certification links
SOL: use margin instead

-minor html correction

--- a/css/application.css
+++ b/css/application.css
@@ -210,6 +210,11 @@ div#about-me {
   div#about-me {
     margin-left: 270px;
   }
+  div#about-me article.about-me {
+    width: 80%;
+    margin: 0 auto;
+    padding: 0 30px;
+  }
 }
 div#about-me h2 {
   display: block;
@@ -222,8 +227,7 @@ div#about-me h2 {
   font-size: 4rem;
 }
 div#about-me article.about-me {
-  padding: 0 30px 0 100px;
-  flex: 1;
+  padding: 0 30px;
 }
 div#about-me article.about-me * {
   text-align: center;
@@ -232,7 +236,6 @@ div#about-me article.about-me * {
 div#about-me article.about-me strong {
   display: block;
   margin: 2rem auto;
-  margin-left: -60px;
   padding-bottom: 1rem;
   font-weight: 500;
   font-size: 100%;
@@ -281,7 +284,7 @@ div#about-me article.about-me footer small {
   }
 }
 div#about-me article#certification-links {
-  margin: 1rem auto 1rem;
+  margin: 4rem auto 1rem;
   display: flex;
   flex-direction: column;
 }
