--- a/scss/main-sections/_about-me.scss
+++ b/scss/main-sections/_about-me.scss
@@ -7,11 +7,16 @@ div#about-me{
         flex-direction: column;
         @media (min-width: 768px){
             margin-left: 270px;
+            article.about-me{
+                width: 80%;
+                margin: 0 auto;
+                padding: 0 30px;
+            }
         }
         @include section-heading;
         article.about-me{
-            padding: 0 30px 0 100px;
-            flex: 1;
+            padding: 0 30px;
+            // flex: 1;
             *{
                 text-align: center;
                 color: black;
@@ -19,7 +24,6 @@ div#about-me{
             strong{
                 display: block;
                 margin: 2rem auto;
-                margin-left: -60px;
                 padding-bottom: 1rem;
                 font: {
                     weight: 500;
@@ -69,7 +73,7 @@ div#about-me{
             }
         }
         article#certification-links{
-            margin: 1rem auto 1rem;
+            margin: 4rem auto 1rem;
             display: flex;
             flex-direction: column;
             p{
